--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -1,40 +1,6 @@
-///////////////////////////
-///// VIDEOS & IMAGES /////
-///////////////////////////
-
-
-.img-wrap, .vid-wrap {
-
-    img, video {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
-    }
-    
-    figure, picture {
-        width: 100%;
-        height: 100%;
-    }
-    
-    figure { margin: 0; }
-    
-    svg {
-        display: block;
-        box-sizing: border-box;
-    }
-    
-    &:not(.imgWrap--seamless) {
-        overflow: hidden;
-        border-radius: var(--go-media-radius, 5px);
-        box-shadow: var(--go-media-shadow, none);
-    }
-    
-    figcaption {
-        display: none;
-    }
-}
+///////////////
+/// IMAGES ////
+///////////////
 
 .img-wrap {
     position: relative;
@@ -65,7 +31,7 @@
         z-index: 5;
     } 
 
-    img:not(.imgWrap__bg__img) {
+    img:not(.imgWrap__bg) {
         object-fit: contain;
     }
 
