--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -5,12 +5,21 @@
 .img-wrap {
     position: relative;
     display: flex;
-    width: fit-content;
+    width: auto;
     height: 100%;
 
     svg {
         width: 100%;
     } 
+
+    figure {
+        position: relative;
+        z-index: 5;
+    } 
+
+    &__img {
+        object-fit: cover;
+    }
 
     &__bg {
         position: absolute;
@@ -26,13 +35,10 @@
         filter: blur(1.5rem) brightness(1.2);
     }
 
-    figure {
-        position: relative;
-        z-index: 5;
-    } 
-
-    img:not(.imgWrap__bg) {
-        object-fit: contain;
+    &--portrait {
+        .img-wrap__img {
+            object-fit: contain!important;
+        }
     }
 
     &--displayLegend {
