--- a/assets/scss/_videos.scss
+++ b/assets/scss/_videos.scss
@@ -83,19 +83,19 @@
             &:active svg {
                 transform: scale(0.75);
             }
-        }
-        
-        &__playpause {
-            background-color: var(--go-media-play-bg, #000);
-            color: var(--go-media-play-color, #fff);
 
-            &[data-state="play"] { svg.pause-icon { display: none; } }
-            &[data-state="pause"] { svg.play-icon { display: none; } }
-        }
+            &.playpause {
+                background-color: var(--go-media-play-bg, #000);
+                color: var(--go-media-play-color, #fff);
 
-        &__mute {
-            &[data-state="mute"] { svg.unmute-icon { display: none; } }
-            &[data-state="unmute"] { svg.mute-icon { display: none; } }
+                &[data-state="play"] { svg.pause-icon { display: none; } }
+                &[data-state="pause"] { svg.play-icon { display: none; } }
+            }
+
+            &.mute {
+                &[data-state="mute"] { svg.unmute-icon { display: none; } }
+                &[data-state="unmute"] { svg.mute-icon { display: none; } }
+            }
         }
 
         &__progress {
@@ -163,11 +163,11 @@
     &--loading {
 
         .img-wrap {
-            opacity: 1!important;
+            opacity: 1;
         }
 
         &:before, &:after {
-            opacity: 1!important;
+            opacity: 1;
         }
 
         &::after {
