--- a/assets/scss/_images.scss
+++ b/assets/scss/_images.scss
@@ -27,7 +27,7 @@
         width: 100%;
         height: 100%;
 
-        // z-index: -1;
+        z-index: -1;
         pointer-events: none;
 
         object-fit: cover;
