--- a/assets/scss/_videos.scss
+++ b/assets/scss/_videos.scss
@@ -88,7 +88,7 @@
         
         &__playpause {
             background-color: var(--go-media-play-bg, #000);
-            color: var(--go-media-play-color, #fff);
+            color: var(--go-media-play-color, #fff)!important;
 
             &[data-state="play"] { svg.pause-icon { display: none; } }
             &[data-state="pause"] { svg.play-icon { display: none; } }
@@ -106,7 +106,7 @@
             width: 100%;
             height: 100%;
             
-            progress[value] {
+            progress {
                 position: relative;
                 overflow: hidden;
 
